cargo-features = ["profile-rustflags"]

[workspace]
members = ["arzmq-sys", "arzmq", "ql_zmq_rcon", "ql_zmq_stats"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
authors = ["Markus 'ShiN0' Gaertner"]

[profile.release]
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release.build-override]
rustflags = ["-Zlocation-detail=none"]

[workspace.dependencies]
arzmq-sys = { path = "arzmq-sys" }
arzmq = { path = "arzmq" }

anyhow = { version = ">=1.0", default-features = false }
tokio = { version = ">=1.46", default-features = false, features = ["default", "macros", "rt", "rt-multi-thread", "sync"] }
uuid = { version = ">=1.17", default-features = false, features = ["v4"] }
clap = { version = ">=4.5", default-features = false, features = ["std", "derive", "color", "help", "usage", "wrap_help", "string"] }

[workspace.lints.rust]
non_local_definitions = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
