[package]
name = "azmq-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"

[features]
default = []
draft-api = []

[dependencies]

[target."cfg(target=\"unix\")".dependencies]
libc = { version = "1.0.0-alpha.1", default-features = false }

[build-dependencies]
zeromq-src = { version = "0.3.5" }
bindgen = { version = "0.72" }
