[package]
name = "azmq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
doc-scrape-examples = true

[dependencies]
azmq-sys = {workspace = true }
z85 = { version = ">=3.0.6", default-features = false }

num-traits = { version = ">=0.2.19", default-features = false }
bitflags = { version = ">=2.9", default-features = false, features = ["core"]}
derive_more = { version = ">=2.0", default-features = false, features = ["from", "debug", "display", "deref"]}
thiserror = { version = ">=2.0.12", default-features = false }
parking_lot = { version = ">=0.12.4", default-features = false, features = ["arc_lock"] }

serde = { version = ">=1.0.219", default-features = false, optional = true, features = ["derive"] }
async-trait = { version = ">=0.1.88", default-features = false, optional = true }
futures = { version = ">=0.3.31", default-features = false, features = ["async-await", "alloc"], optional = true}

[features]
default = ["builder"]
builder = ["dep:serde"]
futures = ["dep:async-trait", "dep:futures"]
draft-api = ["azmq-sys/draft-api"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples", "--cfg", "docsrs"]

[lints]
workspace = true

[[example]]
name = "version"
path = "examples/rustdoc/version.rs"
