[package]
name = "ql_zmq_rcon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref"] }
tap = { workspace = true }
tokio = { workspace = true, features = ["default", "macros", "rt", "rt-multi-thread", "sync"] }
futures = { workspace = true, features = ["async-await"] }
zmq = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "wrap_help", "string"] }
uuid = { workspace = true, features = ["v4"] }

directories = { version = ">=6.0", default-features = false }
linefeed = { version = ">=0.6", default-features = false }
termcolor = { version = ">=1.4", default-features = false }
regex = { version = ">=1.11", default-features = false, features = ["perf", "unicode"] }

[lints]
workspace = true
