cargo-features = ["profile-rustflags"]

[package]
name = "ql_zmq_rcon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
arzmq = { workspace = true, features = ["futures", "builder", "draft-api"] }
tokio = { workspace = true, default-features = false, features = ["default", "macros", "rt", "rt-multi-thread", "sync"] }
anyhow = { workspace = true, default-features = false }
clap = { workspace = true, default-features = false, features = ["std", "derive", "color", "help", "usage", "wrap_help", "string"] }
uuid = { workspace = true, default-features = false, features = ["v4"] }

directories = { version = ">=6.0", default-features = false }
linefeed = { version = ">=0.6", default-features = false }
termcolor = { version = ">=1.4", default-features = false }
regex = { version = ">=1.11", default-features = false, features = ["perf", "unicode"] }

[lints]
workspace = true
