cargo-features = ["profile-rustflags"]

[package]
name = "ql_zmq_stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
azmq = { workspace = true, features = ["futures", "builder", "draft-api"] }
tokio = { workspace = true, default-features = false, features = ["default", "macros", "rt", "rt-multi-thread", "sync", "time"] }
anyhow = { workspace = true, default-features = false }
clap = { workspace = true, default-features = false, features = ["std", "derive", "color", "help", "usage", "wrap_help", "string"] }

serde_json = { version = ">=1.0.140", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[profile.release]
panic = "abort"
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release.build-override]
rustflags = ["-Zlocation-detail=none"]

[profile.release.azmq]
panic = "abort"
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release.azmq.build-override]
rustflags = ["-Zlocation-detail=none"]

[profile.release.azmq_sys]
panic = "abort"
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release.azmq_sys.build-override]
rustflags = ["-Zlocation-detail=none"]
