cargo-features = ["profile-rustflags"]

[package]
name = "ql_zmq_stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
arzmq = { workspace = true, features = ["futures", "builder", "draft-api"] }
tokio = { workspace = true, default-features = false, features = ["default", "macros", "rt", "rt-multi-thread", "sync", "time"] }
anyhow = { workspace = true, default-features = false }
clap = { workspace = true, default-features = false, features = ["std", "derive", "color", "help", "usage", "wrap_help", "string"] }

serde_json = { version = ">=1.0.140", default-features = false, features = ["alloc"] }

[lints]
workspace = true
